updated flower nd fruits

--- a/task2/Fruit.html
+++ b/task2/Fruit.html
@@ -5,33 +5,85 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body bgcolor="#eef1ff">
+       <hr>
+        <header>
+            <center>
+               <h1>
+                 <font color="red "> 360Digri</font><font>Basket</font>
+                </h1> 
+            </center>
+        </header>
+        <p align="right">
+            <a href="Home.html"><img src="home.jpg" width="25px" height="25px"></a>|
+            <a href="#"><img src="fruits.jpg" width="25px" height="25px"></a> |
+            <a href="flowers.html"><img src="flowers.jpeg" width="25px" height="25px"></a>
+       </p>
+        <hr>
+        <marquee behavior="30s" direction="right" "><font color="#d62445">Welcome to Fruits page </font></marquee>
+        <dl>
+     <hr>
 
-</header>
-   <hr>
-    <header>
-
-        <center>
-            <h1>
-             <strong>  <font color = "red"> 360 Digrii </font><font>Basket</font></strong>
-            </h1>
-        </center>
-    </header>
-    <center>
-        <a href="index.html"> Home </a> |
-        <a href="#">Fruits</a> |
-        <a href="flowers.html">Flowers</a>
-    </center>
-    <hr>
-
-    <dl>
-        <dt><strong> List Of Fruits</strong></dt>
-    </dl>
-    <ol type="A">
-        <li>Apple</li>
-        <li>Mango</li>
-        <li>Banana</li>
-    </ol>
+     <table border="1px"  align="center" bgcolor="skyblue" cellpadding="3x" cellspacing="5px"> 
+            <thead>
+                <tr>
+                    <th>SNO</th>
+                    <th>Name</th>
+                    <th>Quantity</th>
+                    <th>Image</th>
+                    <th>product</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Apple</td>
+                    <td>10</td>
+                    <td> <img src="apple.jpeg" width="100px" height="100px"></td>
+                    <td>
+                        <a href="https://en.wikipedia.org/wiki/Apple" target="_blank">Read me</a>
+                    </td>
+                    
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Banana</td>
+                    <td>15</td>
+                    <td> <img src="banana.jpeg" width="100px" height="100px"></td>
+                    <td>
+                        <a href="https://en.wikipedia.org/wiki/Banana" target="_blank">Read me</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>custurd Apple</td>
+                    <td>10</td>
+                    <td><img src="cust.jpeg" width="100px"  height="100px"></td>
+                    <td>
+                        <a href="https://en.wikipedia.org/wiki/Custard_apple" target="_blank">Read me</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>Mango</td>
+                    <td>3</td>
+                    <td> <img src="mango.jpeg" width="100px" height="100px"></td>
+                    <td>
+                        <a href="https://en.wikipedia.org/wiki/Mango" target="_blank">Read me</a>
+                    </td>
+                </tr>
+                
+            </tbody>
+            <tfoot>
+                <tr>
+                    <th></th>
+                    <th>Total</th>
+                    <th>38</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </tfoot>
+        </table>
     <br><br><br><br><br><br><br><br><br>
     <hr>
     <footer>
