--- a/task2/flowers.html
+++ b/task2/flowers.html
@@ -7,8 +7,7 @@
 
 </head>
 <html>
-
-    <body bgcolor="#eef1ff">
+<body bgcolor="#eef1ff">
        <hr>
         <header>
             <center>
@@ -23,15 +22,11 @@
             <a href="#"><img src="flowers.jpeg" width="25px" height="25px"></a>
        </p>
         <hr>
-        <marquee behavior="30s" direction="right" "><font color="#d62445">Welcome to Flowers page </font></marquee>
+        <marquee behavior="30s" direction="right" "><font color="#d62445">Welcome to Fruits page </font></marquee>
         <dl>
-            
-                <dd>
-                   <center> <strong> List Of Flowers</strong></center>
-                </dd>
-            
-        </dl>
-        <table border="1px"  align="center" bgcolor="skyblue" cellpadding="3x" cellspacing="5px"> 
+     <hr>
+
+     <table border="1px"  align="center" bgcolor="skyblue" cellpadding="3x" cellspacing="5px"> 
             <thead>
                 <tr>
                     <th>SNO</th>
@@ -91,8 +86,6 @@
                 </tr>
             </tfoot>
         </table>
-        <br><br><br><br><br><br><br><br>
-        <hr>
         <footer>
             <center>
                 <font color="#4c75d4">copyright@360Digrii</font>
