--- a/task2/flowers.html
+++ b/task2/flowers.html
@@ -22,11 +22,11 @@
             <a href="#"><img src="flowers.jpeg" width="25px" height="25px"></a>
        </p>
         <hr>
-        <marquee behavior="30s" direction="right" "><font color="#d62445">Welcome to Fruits page </font></marquee>
+        <marquee behavior="10s" direction="right" "><i><font color="#d62445" size="5px">Welcome to Flowers page </font></i></marquee>
         <dl>
      <hr>
 
-     <table border="1px"  align="center" bgcolor="skyblue" cellpadding="3x" cellspacing="5px"> 
+     <table border="1px"  align="center" bgcolor="	#00ffbf" cellpadding="4x" cellspacing="3px"> 
             <thead>
                 <tr>
                     <th>SNO</th>
@@ -39,39 +39,39 @@
             <tbody>
                 <tr>
                     <td>1</td>
-                    <td>Apple</td>
+                    <td>Rose</td>
                     <td>10</td>
-                    <td> <img src="apple.jpeg" width="100px" height="100px"></td>
+                    <td> <img src="rose.jpeg" width="100px" height="100px"></td>
                     <td>
-                        <a href="https://en.wikipedia.org/wiki/Apple" target="_blank">Read me</a>
+                        <a href="https://en.wikipedia.org/wiki/Rose" target="_blank">Read me</a>
                     </td>
                     
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td>Banana</td>
+                    <td>Lotus/td>
                     <td>15</td>
-                    <td> <img src="banana.jpeg" width="100px" height="100px"></td>
+                    <td> <img src="lotus.jpeg" width="100px" height="100px"></td>
                     <td>
-                        <a href="https://en.wikipedia.org/wiki/Banana" target="_blank">Read me</a>
+                        <a href="https://en.wikipedia.org/wiki/Nelumbo_nucifera" target="_blank">Read me</a>
                     </td>
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td>custurd Apple</td>
+                    <td>Sunflower</td>
                     <td>10</td>
-                    <td><img src="cust.jpeg" width="100px"  height="100px"></td>
+                    <td><img src="sunflower.webp" width="100px"  height="100px"></td>
                     <td>
-                        <a href="https://en.wikipedia.org/wiki/Custard_apple" target="_blank">Read me</a>
+                        <a href="https://en.wikipedia.org/wiki/Common_sunflower" target="_blank">Read me</a>
                     </td>
                 </tr>
                 <tr>
                     <td>4</td>
-                    <td>Mango</td>
+                    <td>Lilly</td>
                     <td>3</td>
-                    <td> <img src="mango.jpeg" width="100px" height="100px"></td>
+                    <td> <img src="lilly.webp" width="100px" height="100px"></td>
                     <td>
-                        <a href="https://en.wikipedia.org/wiki/Mango" target="_blank">Read me</a>
+                        <a href="https://en.wikipedia.org/wiki/Lilium" target="_blank">Read me</a>
                     </td>
                 </tr>
                 
@@ -86,6 +86,8 @@
                 </tr>
             </tfoot>
         </table>
+        <br><br><br><br><br>
+        <hr>
         <footer>
             <center>
                 <font color="#4c75d4">copyright@360Digrii</font>
