deleted unwwanted things and modified

--- a/task2/flowers.html
+++ b/task2/flowers.html
@@ -90,7 +90,7 @@
         <hr>
         <footer>
             <center>
-                <font color="#4c75d4">copyright@360Digrii</font>
+                <font color="#0040ff">copyright@360Digrii</font>
             </center>
         </footer>
         <hr>
