--- a/task2/Fruit.html
+++ b/task2/Fruit.html
@@ -15,14 +15,18 @@
             </center>
         </header>
         <p align="right">
-            <a href="Home.html"><img src="home.jpg" width="100px" height="100px"></a>|
-            <a href="#"><img src="fruits.jpg" width="100px" height="100px"></a> |
-            <a href="flowers.html"><img src="flowers.jpeg" width="100px" height="100px"></a>
+            <a href="Home.html"><img src="home.jpg" width="50px" height="50px"></a>|
+            <a href="#"><img src="fruits.jpg" width="50px" height="50px"></a> |
+            <a href="flowers.html"><img src="flowers.jpeg" width="50px" height="50px"></a>
        </p>
         <hr>
-        <marquee behavior="30s" direction="right" "><font color="#d62445">Welcome to Fruits page </font></marquee>
-        <dl>
-     <hr>
+        <marquee behavior="30s" direction="right" size="5px"><font color="#d62445">Welcome to Fruits page </font></marquee>
+        <hr>
+      <dl>
+            <dt>
+            <center> <strong><font color="#d62445">Fruits </font></strong></center>
+            </dt>
+        </dl>
 
      <table border="1px"  align="center" bgcolor="skyblue" cellpadding="3x" cellspacing="5px"> 
             <thead>
