--- a/task2/flowers.html
+++ b/task2/flowers.html
@@ -17,16 +17,21 @@
             </center>
         </header>
         <p align="right">
-            <a href="Home.html"><img src="home.jpg" width="100px" height="100px"></a>|
-            <a href="Fruit.html"><img src="fruits.jpg" width="100px" height="100px"></a> |
-            <a href="#"><img src="flowers.jpeg" width="100px" height="100px"></a>
+            <a href="Home.html"><img src="home.jpg" width="50px" height="50px"></a>|
+            <a href="Fruit.html"><img src="fruits.jpg" width="50px" height="50px"></a> |
+            <a href="#"><img src="flowers.jpeg" width="50px" height="50px"></a>
        </p>
         <hr>
         <marquee behavior="10s" direction="right" "><i><font color="#d62445" size="5px">Welcome to Flowers page </font></i></marquee>
         <dl>
      <hr>
+     <dl>
+            <dt>
+            <center> <strong><font color="#d62445">Flowers </font></strong></center>
+            </dt>
+        </dl>
 
-     <table border="1px"  align="center" bgcolor="	#00ffbf" cellpadding="4x" cellspacing="3px"> 
+     <table border="1px"  align="center" bgcolor="	#e2ddd5" cellpadding="4x" cellspacing="3px"> 
             <thead>
                 <tr>
                     <th>SNO</th>
@@ -49,7 +54,7 @@
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td>Lotus/td>
+                    <td>Lotus</td>
                     <td>15</td>
                     <td> <img src="lotus.jpeg" width="100px" height="100px"></td>
                     <td>
