--- a/task3_formControls/form1.html
+++ b/task3_formControls/form1.html
@@ -8,46 +8,62 @@
 <body bgcolor="#eef1e5">
     <form >
 
-        <label> enter name</label>
+        <label> Enter name</label>
          <input type="text">
-         <br>
+         <br><br>
         <label >Enter city</label>
          <input type="text">
-         <br>
-         <label >Enter Age</label>
+         <br><br>
+         <label  >Enter Age</label>
          <input type="number">
-         <br>
+         <br><br>
           <label >Enter Email   </label>
          <input type="email">
-         <br>
+         <br><br>
           <label >Enter linkedin Url</label>
          <input type="url">
-         <br>
+         <br><br>
           <label > Enter Password </label>
          <input type="password">
-         <br>
+         <br><br>
           <label >Enter confirm Password</label>
          <input type="password">
-         <br>
+         <br><br>
           <label >Enter DOB</label>
          <input type="date">
-         <br>
+         <br><br>
           <label >Enter phone number</label>
          <input type="tel">
-         <br>
+         <br><br>
+         Enter Adress:S
+         <textarea cols="10" rows="5">
+
+         </textarea>
+         <br><br>
          <label >Upload Resume</label>
          <input type="file">
-         <br>
+         <br><br>
          <label >Select Gender</label>
          <input type="radio" value="male">male
           <input type="radio" value="female">female
-          <br>
-          <label >Select Languagee</label>
+          <br><br>
+          <label >Select Languages</label>
           <input type="checkbox" value="english" >english
           <input type="checkbox" value="Telugu" >Telugu
           <input type="checkbox" value="Hindi" >Hindi
-          <br>
-          <input type="submit">
+          <br><br>
+
+          Select Degree
+          <select>
+            <option value="Select Degree">Select Degree</option>
+            <option value="UG">UG</option>
+            <option value="PG">PG</option>
+            <option value="PHD">PHD</option>
+            <option value="MBBS">MBBS</option>
+          </select>
+          <br><br>
+           <input type="submit" name="login" value="login">
+          
           <input type="reset">
           
     </form>
