--- a/task2/Home.html
+++ b/task2/Home.html
@@ -19,6 +19,7 @@
         <a href="#"><img src="home.jpg" width="50px" height="50px"></a>|
         <a href="Fruit.html"><img src="fruits.jpg" width="50px" height="50px"></a> |
         <a href="flowers.html"><img src="flowers.jpeg" width="50px" height="50px"></a>
+        <a href="login.html">sign up</a>
     </p>
     <hr>
     <p>
