--- a/task3_formControls/form.html
+++ b/task3_formControls/form.html
@@ -11,24 +11,24 @@
         <caption><h3> Registaration Form</h3></caption>
         <tr >
             <td>
-                <label for="id1" >First Name</label>
+                <label for="firstNAme" >First Name</label>
            </td>
             <td>
-                <label for="id2">Last Name</label>
+                <label for="lastNAme">Last Name</label>
            </td>
         </tr>
         <tr>
             <td>
-                <input type="text" id="id1" name="FirstName" required>
+                <input type="text" id="firstNAme" name="firstName" required>
             </td>
             <td>
-                <input type="text" id="id2" name="LastName" required>
+                <input type="text" id="lastNAme" name="lastName" required>
             </td>
 
         </tr>
         <tr>
             <td>
-                <label for="id3"> Birthday</label>
+                <label for="birthday"> Birthday</label>
             </td>
             <td>
                 Gender
@@ -36,14 +36,13 @@
         </tr>
         <tr>
             <td>
-                <input type="date" id="id3" name="Birthday" required>
+                <input type="date" id="birthday" name="birthday" required>
             </td>
             <td>
-                <input type="radio" id="male" name="Gender" value="male" required>
-                <label for="male">Male</label>
-
-                <input type="radio" id="Female" name="Gender" value="female" >
-                 <label for="Female">FeMale</label>
+                <input type="radio" id="male" name="gender" value="male" required>
+                Male
+                <input type="radio" id="Female" name="gender" value="female" >
+               FeMale
             </td>
         </tr>
         <tr>
@@ -59,18 +58,18 @@
                 <input type="email" name="email" id="id5" required placeholder="Abc01@gmail.com">
             </td>
             <td>
-                <input type="tel" name="PhoneNumber" id="id6" placeholder="+91xxxxxxxxx">
+                <input type="tel" name="phoneNumber" id="id6" placeholder="+91xxxxxxxxx">
             </td>
         </tr>
         <tr>
             <td colspan="2">
-                <label for="id7">Subject</label>
+                <label for="subject">Subject</label>
             </td>
         </tr>
         <tr >
             <td colspan="2"  >
                 
-                <select id="Subject" name="Subject" id="id7" style="width: 100%" required>
+                <select id="subject" name="subject" style="width: 100%" required>
                     <option value="Choose Options">Choose Options</option>
                     <option value="Telugu">Telugu</option>
                     <option value="Hindi">Hindi</option>
@@ -84,7 +83,7 @@
             </td>
         </tr>
         <tr >
-            <td colspan="2">
+            <td >
                     <input type="submit">
             </td> 
         </tr>
