--- a/audio/audio.html
+++ b/audio/audio.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <audio controls>
+    <audio controls class="headdd">
         <source src="https://www.saregama.com/song/chanda-re-chanda-re_78731">
     </audio>
 </body>
