--- a/task3_formControls/f.html
+++ b/task3_formControls/f.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Form</title>
+    <link rel="stylesheet" href="one.css">
 </head>
-<body>
+<body class="headddd">
     <form action="https://www.registration.com" method="get">
         <table border="0" align="center" bgcolor="lightblue" cellspacing="5" cellpadding="5">
             <caption><h3>Registration Form</h3></caption>
@@ -45,7 +46,7 @@
             <tr>
                 <td colspan="2"><label for="subject">Subject</label></td>
             </tr>
-            <tr>id
+            <tr>
                 <td colspan="2">
                     <select id="subject" name="subject" style="width: 100%;" required>
                         <option value="">-- Choose Option --</option>
